Add possibility to copy

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
-    <script type="text/javascript" src="getWinners.js"></script>
+    <title>Dragons</title>
   </head>
-  <body></body>
+  <body>
+    <button onclick="copyToClipboard()">Copy winners to clipboard JSON</button>
+    <p id="json"></p>
+    <script type="text/javascript" src="getWinners.js"></script>
+  </body>
 </html>
