Create simple visible logging

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title>Dragons</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <button onclick="copyToClipboard()">Copy winners to clipboard JSON</button>
-    <p id="json"></p>
-    <script type="text/javascript" src="getWinners.js"></script>
+    <div id="games"></div>
+    <script type="text/javascript" src="dragons.js"></script>
   </body>
 </html>
